# kaldi

./: .dockerignore  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .shellcheck.yaml  .travis.yml  1212  20180628总结.md  CMakeLists.txt  COPYING  Dockerfile  INSTALL  INSTALL.md  LInux笔记.md  Linux笔记.md  README.md  README.txt  RESULTS.run_online_wsj_si84.sh.txt  build.sh  data.json  hindiSentences150.txt  install.bash  kaldiwin.props  kaldi笔记.md  notes  numpyAPI汇总.md  openfstwin_release_win32.props  run_online_wsj_si84.sh  script_tool.py  setup.bash  voice  语音信号处理笔记.md  语音识别笔记.md
src/: .gitignore  .version  CMakeLists.txt  Doxyfile  Doxyfile.bak  INSTALL  Makefile  NOTES  TODO  conf.py  configure  configure.new  configure_mkl  cpplint.py  gen_cmake_skeleton.py  index.rst  makefile_to_cmake.pl  mymake.sh  path.sh  run.sh  run_config.sh
src/adapt/: Makefile  differentiable-fmllr-test.cc  differentiable-fmllr.cc  differentiable-fmllr.h  differentiable-transform-itf.cc  differentiable-transform-itf.h  differentiable-transform-test.cc  differentiable-transform.cc  differentiable-transform.h  generic-transform.cc  generic-transform.h
src/backups/: chain-cu-numerator-final-without-kMaxDeriv.cc  chain-cu-numerator-myscaling-ok.cc  chain-cu-numerator-ok-reorder-terms.cc  chain-num-graph (copy).cc  chain-num-graph (copy).h
src/base/: CMakeLists.txt  Makefile  get_version.sh  io-funcs-inl.h  io-funcs-test.cc  io-funcs.cc  io-funcs.h  kaldi-common.h  kaldi-error-test.cc  kaldi-error.cc  kaldi-error.h  kaldi-extra-types.h  kaldi-math-test.cc  kaldi-math.cc  kaldi-math.h  kaldi-types.h  kaldi-utils.cc  kaldi-utils.h  timer-test.cc  timer.cc  timer.h  valgrind.out
src/cblasext/: Makefile  cblas-extensions.cc  cblas-extensions.h  cblas-wrappers.h  kaldi-blas.h
src/chain/: CMakeLists.txt  Makefile  chain-cu-leakynum.cc  chain-cu-leakynum.h  chain-cu-numerator.cc  chain-cu-numerator.h  chain-datastruct.h  chain-den-graph.cc  chain-den-graph.h  chain-denominator-smbr.cc  chain-denominator-smbr.h  chain-denominator.cc  chain-denominator.h  chain-generic-numerator.cc  chain-generic-numerator.h  chain-kernels-ansi.h  chain-kernels.cu  chain-kernels.h  chain-num-graph.cc  chain-num-graph.h  chain-numerator.cc  chain-numerator.h  chain-smbr-kernels.cu  chain-supervision-splitter-test.cc  chain-supervision-splitter.cc  chain-supervision-splitter.h  chain-supervision-test.cc  chain-supervision-test2.cc  chain-supervision.cc  chain-supervision.h  chain-training.cc  chain-training.h  context-dep-topology.h  den-graph.cc  den-graph.h  hmm-datastruct.h  hmm-kernels-ansi.h  hmm.h  language-model-test.cc  language-model.cc  (+4 more)
src/chainbin/: CMakeLists.txt  Makefile  chain-est-phone-lm.cc  chain-get-supervision.cc  chain-make-den-fst.cc  chain-make-den-graph.cc  chain-make-num-fst-e2e.cc  chain-split-lattices.cc  nnet3-chain-acc-lda-stats.cc  nnet3-chain-add-post-to-egs.cc  nnet3-chain-check-egs.cc  nnet3-chain-combine.cc  nnet3-chain-combine2.cc  nnet3-chain-compute-post.cc  nnet3-chain-compute-prob.cc  nnet3-chain-copy-egs.cc  nnet3-chain-e2e-get-egs.cc  nnet3-chain-get-egs.cc  nnet3-chain-merge-egs.cc  nnet3-chain-normalize-egs.cc  nnet3-chain-shuffle-egs.cc  nnet3-chain-split-and-get-egs.cc  nnet3-chain-subset-egs.cc  nnet3-chain-test-computation.cc  nnet3-chain-train.cc  nnet3-chain-train2.cc  profiler2.h
src/configuration/: Makefile.slow_expf  README.slow_expf  exp-test.cc
src/ctc/: Makefile  cctc-datastruct.h  cctc-decoder-wrappers.cc  cctc-decoder-wrappers.h  cctc-graph.cc  cctc-graph.h  cctc-kernels-ansi.h  cctc-kernels.cu  cctc-kernels.h  cctc-supervision-test.cc  cctc-supervision.cc  cctc-supervision.h  cctc-test-utils.cc  cctc-test-utils.h  cctc-tombstone-test.cc  cctc-tombstone.cc  cctc-tombstone.h  cctc-training.cc  cctc-training.h  cctc-transition-model-test.cc  cctc-transition-model.cc  cctc-transition-model.h  ctc-supervision.cc  ctc-supervision.h  language-model-test.cc  language-model.cc  language-model.h
src/ctcbin/: Makefile  ctc-copy-transition-model.cc  ctc-get-supervision.cc  ctc-init-transition-model.cc  ctc-make-decoding-graph.cc  ctc-transition-model-info.cc  nnet3-ctc-acc-lda-stats.cc  nnet3-ctc-combine.cc  nnet3-ctc-compute-prob.cc  nnet3-ctc-copy-egs.cc  nnet3-ctc-copy.cc  nnet3-ctc-get-egs.cc  nnet3-ctc-info.cc  nnet3-ctc-latgen-faster.cc  nnet3-ctc-merge-egs.cc  nnet3-ctc-shuffle-egs.cc  nnet3-ctc-subset-egs.cc  nnet3-ctc-train.cc
src/cudadecoder/: CMakeLists.txt  Makefile  README  batched-static-nnet3-kernels.cu  batched-static-nnet3-kernels.h  batched-static-nnet3.cc  batched-static-nnet3.h  batched-threaded-cuda-decoder.cc  batched-threaded-cuda-decoder.h  batched-threaded-nnet3-cuda-online-pipeline.cc  batched-threaded-nnet3-cuda-online-pipeline.h  batched-threaded-nnet3-cuda-pipeline.cc  batched-threaded-nnet3-cuda-pipeline.h  batched-threaded-nnet3-cuda-pipeline2.cc  batched-threaded-nnet3-cuda-pipeline2.h  cuda-decodable-itf.h  cuda-decoder-common.h  cuda-decoder-kernels-utils.h  cuda-decoder-kernels.cu  cuda-decoder-kernels.h  cuda-decoder-utils.h  cuda-decoder.cc  cuda-decoder.cu  cuda-decoder.h  cuda-fst.cc  cuda-fst.cu  cuda-fst.h  cuda-online-pipeline-dynamic-batcher.cc  cuda-online-pipeline-dynamic-batcher.h  cuda-pipeline-common.cc  cuda-pipeline-common.h  decodable-cumatrix.cc  decodable-cumatrix.h  lattice-postprocessor.cc  lattice-postprocessor.h  online-endpoint.cc  online-endpoint.h  thread-pool-cia.cc  thread-pool-cia.h  thread-pool-light.h  (+1 more)
src/cudadecoderbin/: CMakeLists.txt  Makefile  batched-wav-nnet3-cuda-online.cc  batched-wav-nnet3-cuda.cc  batched-wav-nnet3-cuda2.cc  cuda-bin-tools.h
src/cudafeat/: CMakeLists.txt  Makefile  feature-mfcc-cuda.cu  feature-mfcc-cuda.h  feature-online-batched-cmvn-cuda-kernels.cu  feature-online-batched-cmvn-cuda-kernels.h  feature-online-batched-cmvn-cuda.cc  feature-online-batched-cmvn-cuda.h  feature-online-batched-ivector-cuda-kernels.cu  feature-online-batched-ivector-cuda-kernels.h  feature-online-batched-ivector-cuda.cc  feature-online-batched-ivector-cuda.h  feature-online-cmvn-cuda.cu  (+20 more)
(+14354 files in other folders)
